--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "security-check": "node scripts/security-check.js",
+    "audit": "npm audit --audit-level=moderate",
+    "audit-fix": "npm audit fix"
   },
   "dependencies": {
     "@types/react-slick": "^0.23.13",
